fix z-index

--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -11,6 +11,7 @@
   transition: 0.5s;
   color: v.$background-primary;
   font-size: 2rem;
+  z-index: 2;
 
   h2 {
     display: inline-block;
